# CPP-Project-Boilerplate

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: main.cpp
include/: exampleClass.hpp
src/: exampleClass.cpp
tests/: CMakeLists.txt  anotherTest.cpp  exampleTest.cpp
